--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,24 +1,38 @@
 name: Deploy to DigitalOcean
 on:
   push:
-    branches: [ main ]
+    branches: [ main, master ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       
       - name: Install Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '14'
+          node-version: '18'
           
       - name: Install dependencies
-        run: npm install
+        run: |
+          npm install
+          cd app && npm install
         
       - name: Build application
         run: npm run build
+        env:
+          NODE_ENV: production
+          PAPERTRAIL_HOST: ${{ secrets.PAPERTRAIL_HOST }}
+          PAPERTRAIL_PORT: ${{ secrets.PAPERTRAIL_PORT }}
         
-      # Add deployment steps here after setting up DigitalOcean
-      # You'll need to add secrets in GitHub for DigitalOcean authentication
+      - name: Deploy to DigitalOcean
+        uses: digitalocean/app-action@v1
+        with:
+          app_name: ${{ secrets.DIGITALOCEAN_APP_NAME }}
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+          images: '[{"name":"soul-sanctuary","registry":"registry.digitalocean.com","registry_type":"DOCR","dockerfile_path":"Dockerfile"}]'
+        env:
+          NODE_ENV: production
+          PAPERTRAIL_HOST: ${{ secrets.PAPERTRAIL_HOST }}
+          PAPERTRAIL_PORT: ${{ secrets.PAPERTRAIL_PORT }}
