--- a/app/package.json
+++ b/app/package.json
@@ -3,20 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.474.0",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
+    "@sentry/react": "^8.42.0",
     "@solana/spl-token": "^0.3.9",
     "@solana/web3.js": "^1.87.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1520.0",
     "buffer": "^6.0.3",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
+    "env-cmd": "^10.1.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.8.0",
+    "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1",
+    "rate-limit-redis": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.2.0",
@@ -26,13 +38,29 @@
     "react-scripts": "5.0.1",
     "react-share": "^5.1.1",
     "recharts": "^2.14.1",
-    "web-vitals": "^2.1.4"
+    "redis": "^4.6.11",
+    "serve": "^14.2.4",
+    "sharp": "^0.33.1",
+    "source-map-explorer": "^2.5.3",
+    "tweetnacl": "^1.0.3",
+    "uuid": "^9.0.1",
+    "web-vitals": "^2.1.4",
+    "ws": "^8.15.1"
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "node src/server.js",
+    "dev": "concurrently \"npm run start\" \"npm run server\"",
     "build": "react-scripts build",
+    "build:production": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
+    "serve:production": "serve -s build",
+    "deploy": "vercel --prod",
+    "setup:domain": "node scripts/setup-domain.js",
+    "setup:production": "npm run build:production && npm run deploy && npm run setup:domain",
+    "setup:all": "node scripts/setup-all.js"
   },
   "eslintConfig": {
     "extends": [
@@ -51,5 +79,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
