--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,45 +7,40 @@ on:
     branches: [ master ]
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
-
+    
     steps:
       - uses: actions/checkout@v3
-
+      
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
           cache: 'npm'
-
+          
       - name: Install Root Dependencies
-        run: npm ci
-
+        run: npm install
+        
       - name: Install App Dependencies
         working-directory: ./app
         run: |
-          npm ci
+          npm install
           npm install --save-dev @babel/plugin-proposal-private-property-in-object@7.21.11
-
-      - name: Build Application
-        env:
-          CI: false
-          NODE_ENV: production
-          DISABLE_ESLINT_PLUGIN: true
-        run: npm run build
-
-      - name: Deploy to DigitalOcean
-        uses: digitalocean/app-action@main
+          npm install --save-dev @jest/transform@29.7.0
+          npm install --save-dev babel-jest@29.7.0
+          npm install --save-dev babel-preset-jest@29.6.3
+          npm install --save-dev write-file-atomic@4.0.2
+          npm install --save-dev babel-plugin-jest-hoist@29.6.3
+        
+      - name: Build
+        working-directory: ./app
+        run: |
+          DISABLE_ESLINT_PLUGIN=true CI=false npm run build
+          
+      - name: Deploy to Digital Ocean
+        uses: digitalocean/app_action@v1.1.5
         with:
           app_name: soul-sanctuary
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-          images: |
-            [
-              {
-                "name": "soul-sanctuary",
-                "registry": "registry.digitalocean.com",
-                "repository": "soul-sanctuary",
-                "tag": "${{ github.sha }}"
-              }
-            ]
+          images: '[{"name": "soul-sanctuary", "registry_type": "DOCKER_HUB"}]'
