--- a/app/package.json
+++ b/app/package.json
@@ -47,20 +47,40 @@
     "web-vitals": "^2.1.4",
     "ws": "^8.15.1"
   },
+  "devDependencies": {
+    "@babel/core": "^7.23.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.23.4",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/plugin-transform-runtime": "^7.23.6",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/runtime": "^7.23.6",
+    "@jest/transform": "^29.7.0",
+    "babel-jest": "^29.7.0",
+    "babel-preset-jest": "^29.6.3",
+    "babel-plugin-jest-hoist": "^29.6.3",
+    "write-file-atomic": "^4.0.2",
+    "eslint": "^8.55.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "server": "node src/server.js",
     "dev": "concurrently \"npm run start\" \"npm run server\"",
-    "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
-    "build:production": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
-    "test": "react-scripts test",
+    "build": "DISABLE_ESLINT_PLUGIN=true CI=false react-scripts build",
+    "build:production": "DISABLE_ESLINT_PLUGIN=true CI=false react-scripts build",
+    "test": "react-scripts test --passWithNoTests",
     "eject": "react-scripts eject",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "serve:production": "serve -s build",
     "deploy": "vercel --prod",
-    "setup:domain": "node scripts/setup-domain.js",
-    "setup:production": "npm run build:production && npm run deploy && npm run setup:domain",
-    "setup:all": "node scripts/setup-all.js"
+    "setup:domain": "node scripts/setup-domain.js"
   },
   "eslintConfig": {
     "extends": [
@@ -79,21 +99,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/core": "^7.23.6",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-transform-private-property-in-object": "^7.23.4",
-    "@babel/preset-env": "^7.23.6",
-    "@babel/preset-react": "^7.23.3",
-    "@babel/plugin-transform-runtime": "^7.23.6",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
-    "@babel/runtime": "^7.23.6",
-    "babel-jest": "^29.7.0",
-    "eslint": "^8.55.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
