--- a/app/package.json
+++ b/app/package.json
@@ -1,86 +1,30 @@
 {
-  "name": "soul-sanctuary",
+  "name": "soul-sanctuary-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.474.0",
-    "@emotion/react": "^11.13.5",
-    "@emotion/styled": "^11.13.5",
-    "@heroicons/react": "^2.2.0",
-    "@mui/icons-material": "^6.1.10",
-    "@mui/material": "^6.1.10",
-    "@sentry/react": "^8.42.0",
     "@solana/spl-token": "^0.3.9",
     "@solana/web3.js": "^1.87.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "aws-sdk": "^2.1520.0",
-    "buffer": "^6.0.3",
-    "cors": "^2.8.5",
-    "date-fns": "^2.30.0",
-    "env-cmd": "^10.1.0",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
-    "ioredis": "^5.3.2",
-    "jsonwebtoken": "^9.0.2",
-    "leaflet": "^1.9.4",
-    "mapbox-gl": "^3.8.0",
-    "mongoose": "^8.0.3",
-    "multer": "^1.4.5-lts.1",
-    "rate-limit-redis": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-easy-crop": "^5.2.0",
-    "react-icons": "^4.12.0",
-    "react-leaflet": "^4.2.1",
-    "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
-    "react-share": "^5.1.1",
-    "recharts": "^2.14.1",
-    "redis": "^4.6.11",
-    "serve": "^14.2.4",
-    "sharp": "^0.33.1",
-    "source-map-explorer": "^2.5.3",
-    "tweetnacl": "^1.0.3",
-    "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4",
-    "ws": "^8.15.1"
+    "typescript": "4.9.5",
+    "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "@babel/core": "^7.23.6",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-transform-private-property-in-object": "^7.23.4",
-    "@babel/preset-env": "^7.23.6",
-    "@babel/preset-react": "^7.23.3",
-    "@babel/plugin-transform-runtime": "^7.23.6",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
-    "@babel/runtime": "^7.23.6",
-    "@jest/transform": "^29.7.0",
-    "babel-jest": "^29.7.0",
-    "babel-preset-jest": "^29.6.3",
-    "babel-plugin-jest-hoist": "^29.6.3",
-    "write-file-atomic": "^4.0.2",
-    "eslint": "^8.55.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0"
+  "resolutions": {
+    "typescript": "4.9.5"
+  },
+  "overrides": {
+    "typescript": "4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
-    "server": "node src/server.js",
-    "dev": "concurrently \"npm run start\" \"npm run server\"",
     "build": "DISABLE_ESLINT_PLUGIN=true CI=false react-scripts build",
-    "build:production": "DISABLE_ESLINT_PLUGIN=true CI=false react-scripts build",
     "test": "react-scripts test --passWithNoTests",
-    "eject": "react-scripts eject",
-    "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "serve:production": "serve -s build",
-    "deploy": "vercel --prod",
-    "setup:domain": "node scripts/setup-domain.js"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
