--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "name": "soul-sanctuary",
   "version": "1.0.0",
-  "description": "SOuL Sanctuary Web Application",
+  "description": "",
   "main": "server/src/server.js",
   "scripts": {
     "start": "node -r dotenv/config server/src/server.js dotenv_config_path=.env.production",
-    "build": "cd app && npm install && DISABLE_ESLINT_PLUGIN=true CI=false npm run build",
+    "build": "cd app && npm install --legacy-peer-deps && DISABLE_ESLINT_PLUGIN=true CI=false npm run build",
     "dev": "nodemon -r dotenv/config server/src/server.js dotenv_config_path=.env.development",
     "start:prod": "node -r dotenv/config server/src/server.js dotenv_config_path=.env.production",
     "start:dev": "node -r dotenv/config server/src/server.js dotenv_config_path=.env.development",
-    "postinstall": "cd app && npm install"
+    "postinstall": "cd app && npm install --legacy-peer-deps"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": "18.x"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
