--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment: Production
     
     steps:
       - uses: actions/checkout@v3
@@ -20,6 +21,16 @@ jobs:
           cache: 'npm'
           
       - name: Install Dependencies and Build
+        env:
+          NODE_ENV: production
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_PORT: ${{ secrets.DB_PORT }}
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
+          COOKIE_SECRET: ${{ secrets.COOKIE_SECRET }}
         run: |
           npm install --legacy-peer-deps
           cd app
@@ -30,7 +41,7 @@ jobs:
       - name: Deploy to DigitalOcean
         uses: digitalocean/app_action@main
         with:
-          app_name: soul-sanctuary
+          app_name: ${{ secrets.DIGITALOCEAN_APP_NAME }}
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
           images: |
             [
