--- a/app/package.json
+++ b/app/package.json
@@ -15,10 +15,14 @@
     "web-vitals": "^2.1.4"
   },
   "resolutions": {
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "ajv": "^8.0.0",
+    "ajv-keywords": "^5.0.0"
   },
   "overrides": {
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "ajv": "^8.0.0",
+    "ajv-keywords": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
