--- a/app/package.json
+++ b/app/package.json
@@ -12,17 +12,19 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ajv": "6.12.6",
+    "ajv-keywords": "3.5.2"
   },
   "resolutions": {
     "typescript": "4.9.5",
-    "ajv": "^8.0.0",
-    "ajv-keywords": "^5.0.0"
+    "ajv": "6.12.6",
+    "ajv-keywords": "3.5.2"
   },
   "overrides": {
     "typescript": "4.9.5",
-    "ajv": "^8.0.0",
-    "ajv-keywords": "^5.0.0"
+    "ajv": "6.12.6",
+    "ajv-keywords": "3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
