--- a/app/package.json
+++ b/app/package.json
@@ -13,18 +13,28 @@
     "react-scripts": "5.0.1",
     "typescript": "4.9.5",
     "web-vitals": "^2.1.4",
-    "ajv": "6.12.6",
-    "ajv-keywords": "3.5.2"
+    "ajv": "8.12.0",
+    "ajv-keywords": "5.1.0",
+    "ajv-formats": "2.1.1",
+    "schema-utils": "4.2.0"
   },
   "resolutions": {
     "typescript": "4.9.5",
-    "ajv": "6.12.6",
-    "ajv-keywords": "3.5.2"
+    "ajv": "8.12.0",
+    "ajv-keywords": "5.1.0",
+    "ajv-formats": "2.1.1",
+    "schema-utils": "4.2.0",
+    "@babel/core": "7.23.7",
+    "webpack": "5.89.0"
   },
   "overrides": {
     "typescript": "4.9.5",
-    "ajv": "6.12.6",
-    "ajv-keywords": "3.5.2"
+    "ajv": "8.12.0",
+    "ajv-keywords": "5.1.0",
+    "ajv-formats": "2.1.1",
+    "schema-utils": "4.2.0",
+    "@babel/core": "7.23.7",
+    "webpack": "5.89.0"
   },
   "scripts": {
     "start": "react-scripts start",
