--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,10 @@ jobs:
         env:
           NODE_ENV: production
           CI: false
-          HOST: app.soulsanctuary.cloud
-          PORT: 3001
+          HOST: soulsanctuary.cloud
+          PORT: 8080
           API_VERSION: v1
-          CORS_ORIGIN: https://app.soulsanctuary.cloud
+          CORS_ORIGIN: https://soulsanctuary.cloud
           DB_HOST: ${{ secrets.DB_HOST }}
           DB_PORT: ${{ secrets.DB_PORT }}
           DB_NAME: ${{ secrets.DB_NAME }}
