--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
           CI: false
           HOST: soulsanctuary.cloud
           PORT: 8080
+          HTTPS_PORT: 443
           API_VERSION: v1
           CORS_ORIGIN: https://soulsanctuary.cloud
           DB_HOST: ${{ secrets.DB_HOST }}
@@ -39,8 +40,10 @@ jobs:
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
           SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
           COOKIE_SECRET: ${{ secrets.COOKIE_SECRET }}
-          REACT_APP_API_URL: https://soulsanctuary.cloud
-          REACT_APP_WS_URL: wss://soulsanctuary.cloud
+          SSL_KEY_PATH: /etc/letsencrypt/live/app.soulsanctuary.cloud/privkey.pem
+          SSL_CERT_PATH: /etc/letsencrypt/live/app.soulsanctuary.cloud/fullchain.pem
+          REACT_APP_API_URL: https://app.soulsanctuary.cloud
+          REACT_APP_WS_URL: wss://app.soulsanctuary.cloud
         run: |
           cd app
           rm -rf node_modules package-lock.json
