--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node": ">=14.0.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^9.0.0",
     "path": "^0.12.7",
