--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,23 +12,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install SSH Key
-        uses: shimataro/ssh-key-action@v2
-        with:
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          name: id_ed25519
-          known_hosts: unnecessary
-          if_key_exists: replace
-
-      - name: Adding Known Hosts
-        run: ssh-keyscan -H ${{ secrets.DROPLET_IP }} >> ~/.ssh/known_hosts
-
-      - name: Check SSH Connection
-        run: ssh -v root@${{ secrets.DROPLET_IP }} 'echo "SSH Connection Successful"'
-
       - name: Deploy to DigitalOcean
-        run: |
-          ssh root@${{ secrets.DROPLET_IP }} '
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.DROPLET_IP }}
+          username: root
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
             set -e
             echo "Starting deployment..."
             cd /var/www/soulsanctuary || exit 1
@@ -42,4 +32,3 @@ jobs:
             echo "Restarting server..."
             pm2 restart soulsanctuary-backend || pm2 start src/server.js --name soulsanctuary-backend
             echo "Deployment completed successfully"
-          '
