--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,9 +18,10 @@ jobs:
           host: ${{ secrets.DROPLET_IP }}
           username: root
           key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
           debug: true
           script: |
-            set -e
+            set -ex
             echo "Starting deployment..."
             cd /var/www/soulsanctuary || exit 1
             echo "Current directory: $(pwd)"
