--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,54 @@
 # Dependencies
 node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
+/.pnp
+.pnp.js
 
-# Environment variables
+# Testing
+/coverage
+
+# Production
+/build
+/dist
+
+# Environment files
 .env
 .env.local
-.env.*.local
 .env.development
+.env.development.local
+.env.test.local
 .env.production
+.env.production.local
 
-# Build output
-dist/
-build/
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# IDE/Editor specific
-.vscode/
+# IDE
 .idea/
+.vscode/
 *.swp
 *.swo
 
-# OS specific
+# OS
 .DS_Store
 Thumbs.db
 
-# Logs
-logs/
-*.log
+# Vercel
+.vercel
+.now
 
-# Runtime data
-pids/
+# Build artifacts
+*.vsix
+*.log
 *.pid
 *.seed
 *.pid.lock
+
+# PM2
+ecosystem.config.js
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
